Modified so that the code works with earlier versions of java.