@@ -24,7 +24,7 @@ public class DescriptionFilter implements Filter {
 
             List<String> modifiedParts = IntStream.range(0, parts.size())
                     .filter(i -> i != deleteIndex)
-                    .mapToObj(parts::get).toList();
+                    .mapToObj(parts::get).collect(Collectors.toList());
 
             return modifiedParts.stream().collect(Collectors.joining("\n"));
         }
