@@ -23,7 +23,7 @@ public class IdFilter implements Filter {
             System.out.println("ID: " + c.substring(0, c.length() - 2));
             List<String> modifiedParts = IntStream.range(0, parts.size())
                     .filter(i -> i != deleteIndex)
-                    .mapToObj(parts::get).toList();
+                    .mapToObj(parts::get).collect(Collectors.toList());
 
             return modifiedParts.stream().collect(Collectors.joining("\n"));
         }
